fix spacing on title greeting

--- a/styles.css
+++ b/styles.css
@@ -9,14 +9,11 @@ body
 }
 
 #greet {
-  /* margin-top: 35px; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  flex-grow: 1;
-  /* z-index: 999; */
-  
+  flex-grow: 1;  
 }
 
 #greet h1 {
@@ -24,6 +21,10 @@ body
   justify-content: center;
   margin-top: 5px;
   margin-bottom: 5px;
+}
+
+#title {
+  padding-top: 35px;
 }
 
 #title {
@@ -39,20 +40,17 @@ body
   opacity: 0.1;
 }
 
-
 h1 {
   font-family: 'VT323', monospace;
   display: flex;
   font-size: 19px;
   color: white;
-  padding-top: 35px;
 }
 
 #button-container {
   display: flex;
   justify-content: center;
 }
-
 
 #button-container button {
   font-family: 'VT323', monospace;
@@ -113,7 +111,7 @@ h1 {
   overflow: hidden;
   background-color: white;
   margin: 6px;
-   -webkit-box-shadow: 0 16px 6px -6px rgba(119, 119, 119, 0.28);
+  -webkit-box-shadow: 0 16px 6px -6px rgba(119, 119, 119, 0.28);
   -moz-box-shadow: 0 16px 6px -6px rgba(119, 119, 119, 0.28);
   box-shadow: 0 16px 6px -6px rgba(119, 119, 119, 0.28);
   z-index: 999;
@@ -127,17 +125,13 @@ h1 {
   color: white;
 }
 
-
 #score {
   display: block;
   position: absolute;
   z-index: 100;
-  /* top: 6.5%; */
   padding-top: 38px;
   right: 7%;
   color: white;
-   font-family: 'VT323', monospace;
-  /* display: flex; */
+  font-family: 'VT323', monospace;
   font-size: 48px;
-  /* color: rgb(134, 122, 122); */
 }
